# jira-tool

./: .gitignore  .readthedocs.yaml  README.md  README.rst  pyproject.toml  setup.cfg
.github/workflows/: python-3-10-test.yml  python-3-7-test.yml  python-app.yml
docs/: conf.py  excel_operation.rst  index.rst  requirements-docs.txt
sample/: TestData.xlsx  main.py  sample.xlsx  sorted.xlsx
src/jira_tool/: __init__.py  excel_defination.py  excel_operation.py  priority.py  story.py
src/jira_tool/assets/: excel_defination.json  logging.conf
tests/: test_excel_defination.py  test_excel_operation.py  test_milestone.py  test_priority.py  test_sprint_schedule.py  test_story.py  test_table_defination.py
tests/files/: excel_defination.json  happy_path.xlsx  happy_path_sorted.xlsx
