[metadata]
name = sharry-jira-tool
version = 0.1.2
author = Sharry Xu
author_email = sharry.xu@outlook.com
description = Sort Jira stories
long_description = file: README.md
keywords = Jira, Excel
long_description_content_type = text/markdown
url = https://github.com/SharryXu/jira-tool
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
include_package_data = True
packages = find:
python_requires = >=3.7
install_requires =
    openpyxl >= "3.0.10"
    python-dateutil >= "2.8.2"

[options.packages.find]
where = src